// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Edit List Table Tests Should render correctly for correct input 1`] = `
<table
  className="ui striped table"
>
  <thead
    className=""
  >
    <tr
      className=""
    >
      <th
        className=""
      >
        Target
      </th>
      <th
        className=""
      >
        Type
      </th>
      <th
        className=""
      >
        Summary
      </th>
    </tr>
  </thead>
  <tbody
    className=""
  >
    <tr
      className=""
      onClick={[Function]}
    >
      <td
        className=""
      >
        6/3/1991 - some comp : some team vs some other team
      </td>
      <td
        className=""
      >
        Replace
      </td>
      <td
        className=""
      >
        <div>
          <i>
            Replace: 
          </i>
           
          apple
            
          <i>
             - with - 
          </i>
            
          banna
        </div>
      </td>
    </tr>
    <tr
      className=""
      onClick={[Function]}
    >
      <td
        className=""
      >
        7/4/1991 - some author : some title
      </td>
      <td
        className=""
      >
        Replace
      </td>
      <td
        className=""
      >
        <div>
          <i>
            Replace: 
          </i>
           
          football
            
          <i>
             - with - 
          </i>
            
          soccer
        </div>
      </td>
    </tr>
    <tr
      className=""
      onClick={[Function]}
    >
      <td
        className=""
      >
        6/3/1991 - some comp : some team vs some other team
      </td>
      <td
        className=""
      >
        Replace with Field
      </td>
      <td
        className=""
      >
        <div>
          <i>
            Replace: 
          </i>
           
          gary jones
            
          <i>
             - with - 
          </i>
            
          player 1
          <i>
             - on field - 
          </i>
            
          player
           
        </div>
      </td>
    </tr>
    <tr
      className=""
      onClick={[Function]}
    >
      <td
        className=""
      >
        No Data Selected
      </td>
      <td
        className=""
      >
        Replace
      </td>
      <td
        className=""
      >
        <div>
          <i>
            Replace: 
          </i>
           
          reece
            
          <i>
             - with - 
          </i>
            
          ryan
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Edit List Table Tests Should render correctly for correct input with onSelect handler 1`] = `
<table
  className="ui selectable striped table"
>
  <thead
    className=""
  >
    <tr
      className=""
    >
      <th
        className=""
      >
        Target
      </th>
      <th
        className=""
      >
        Type
      </th>
      <th
        className=""
      >
        Summary
      </th>
    </tr>
  </thead>
  <tbody
    className=""
  >
    <tr
      className=""
      onClick={[Function]}
    >
      <td
        className=""
      >
        6/3/1991 - some comp : some team vs some other team
      </td>
      <td
        className=""
      >
        Replace
      </td>
      <td
        className=""
      >
        <div>
          <i>
            Replace: 
          </i>
           
          apple
            
          <i>
             - with - 
          </i>
            
          banna
        </div>
      </td>
    </tr>
    <tr
      className=""
      onClick={[Function]}
    >
      <td
        className=""
      >
        7/4/1991 - some author : some title
      </td>
      <td
        className=""
      >
        Replace
      </td>
      <td
        className=""
      >
        <div>
          <i>
            Replace: 
          </i>
           
          football
            
          <i>
             - with - 
          </i>
            
          soccer
        </div>
      </td>
    </tr>
    <tr
      className=""
      onClick={[Function]}
    >
      <td
        className=""
      >
        6/3/1991 - some comp : some team vs some other team
      </td>
      <td
        className=""
      >
        Replace with Field
      </td>
      <td
        className=""
      >
        <div>
          <i>
            Replace: 
          </i>
           
          gary jones
            
          <i>
             - with - 
          </i>
            
          player 1
          <i>
             - on field - 
          </i>
            
          player
           
        </div>
      </td>
    </tr>
    <tr
      className=""
      onClick={[Function]}
    >
      <td
        className=""
      >
        No Data Selected
      </td>
      <td
        className=""
      >
        Replace
      </td>
      <td
        className=""
      >
        <div>
          <i>
            Replace: 
          </i>
           
          reece
            
          <i>
             - with - 
          </i>
            
          ryan
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Edit List Table Tests Should render correctly for correct with no data 1`] = `
<table
  className="ui selectable striped table"
>
  <thead
    className=""
  >
    <tr
      className=""
    >
      <th
        className=""
      >
        Target
      </th>
      <th
        className=""
      >
        Type
      </th>
      <th
        className=""
      >
        Summary
      </th>
    </tr>
  </thead>
  <tbody
    className=""
  />
</table>
`;

exports[`Edit List Table Tests Should render correctly with selected row 1`] = `
<Table
  as="table"
  selectable={true}
  striped={true}
>
  <TableHeader
    as="thead"
  >
    <TableRow
      as="tr"
      cellAs="td"
    >
      <TableHeaderCell
        as="th"
      >
        Target
      </TableHeaderCell>
      <TableHeaderCell
        as="th"
      >
        Type
      </TableHeaderCell>
      <TableHeaderCell
        as="th"
      >
        Summary
      </TableHeaderCell>
    </TableRow>
  </TableHeader>
  <TableBody
    as="tbody"
  >
    <EditRow
      data={
        Object {
          "edit": Edit {
            "editID": 1,
            "isCorpus": false,
            "replace": "apple",
            "replaceWith": "banna",
            "settings": Object {},
            "structuredDataID": 1,
            "type": "replace",
            "unstructuredDataID": null,
          },
          "target": StructuredData {
            "away": "some other team",
            "competitionID": 1,
            "competitionName": "some comp",
            "data": Object {},
            "date": 1991-04-20T00:00:00.000Z,
            "home": "some team",
            "id": 1,
          },
        }
      }
      isActive={true}
      key="1"
      onSelect={[Function]}
    />
    <EditRow
      data={
        Object {
          "edit": Edit {
            "editID": 2,
            "isCorpus": false,
            "replace": "football",
            "replaceWith": "soccer",
            "settings": Object {},
            "structuredDataID": null,
            "type": "replace",
            "unstructuredDataID": 1,
          },
          "target": UnstructuredData {
            "author": "some author",
            "data": "some data",
            "extracted": 1991-04-20T00:00:00.000Z,
            "id": 1,
            "matchid": 1,
            "published": 1991-04-20T00:00:00.000Z,
            "title": "some title",
            "url": "some url",
          },
        }
      }
      isActive={true}
      key="2"
      onSelect={[Function]}
    />
    <EditRow
      data={
        Object {
          "edit": Edit {
            "editID": 3,
            "isCorpus": false,
            "replace": "gary jones",
            "replaceWith": "player 1",
            "settings": Object {
              "field": "player",
            },
            "structuredDataID": 1,
            "type": "replacewithfield",
            "unstructuredDataID": null,
          },
          "target": StructuredData {
            "away": "some other team",
            "competitionID": 1,
            "competitionName": "some comp",
            "data": Object {},
            "date": 1991-04-20T00:00:00.000Z,
            "home": "some team",
            "id": 1,
          },
        }
      }
      isActive={true}
      key="3"
      onSelect={[Function]}
    />
    <EditRow
      data={
        Object {
          "edit": Edit {
            "editID": 4,
            "isCorpus": true,
            "replace": "reece",
            "replaceWith": "ryan",
            "settings": Object {},
            "structuredDataID": null,
            "type": "replace",
            "unstructuredDataID": null,
          },
          "target": undefined,
        }
      }
      isActive={true}
      key="4"
      onSelect={[Function]}
    />
  </TableBody>
</Table>
`;
